Fixes error where tarot cards overlapped the navbar

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -87,7 +87,7 @@ nav {
 	min-height: 15vh;
 	width: 100%;
 	top: 0;
-	z-index: 1;
+	z-index: 80;
 	background-color: var(--shade-color);
 	text-transform: uppercase;
 }
